--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -32,7 +32,7 @@ steps:
 substitutions:
   _REGION: asia-southeast1
   _SERVICE_NAME: rails-rottenpotatoes
-  _INSTANCE_NAME: [CLOUD SQL INSTANCE NAME]
+  _INSTANCE_NAME: rottenpotatoes
 
 images:
   - "gcr.io/${PROJECT_ID}/${_SERVICE_NAME}"
